# svtrp

./: frames_2024-04-11_18.35.05.gv  readme.md  readme.txt
Wall_Follower/action_service/: CMakeLists.txt  package.xml
Wall_Follower/action_service/launch/: action_server.launch.py
Wall_Follower/action_service/src/: action_server.cpp
Wall_Follower/topic_publisher_pkg/: CMakeLists.txt
Wall_Follower/topic_publisher_pkg/launch/: main.launch.py  move_robot.launch.py  move_robot_client.launch.py
Wall_Follower/wall_service_pkg/launch/: find_wall_server.launch.py  service_client.launch.py
Wall_Follower/wall_service_pkg/src/: find_wall_server.cpp
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: Battery.msg
custom_nav2_controller_plugin/: CMakeLists.txt  package.xml  regulated_pure_pursuit_controller_info.xml
custom_nav2_controller_plugin/include/custom_nav2_controller_plugin/: regulated_pure_pursuit_controller.hpp
custom_nav2_controller_plugin/src/: regulated_pure_pursuit_controller.cpp
custom_nav2_costmap_plugin/: CMakeLists.txt  gradient_layer.xml  moving_layer.xml  package.xml
custom_nav2_costmap_plugin/include/custom_nav2_costmap_plugin/: gradient_layer.hpp  moving_costmap.hpp
custom_nav2_costmap_plugin/src/: gradient_layer.cpp  moving_costmap.cpp
custom_nav2_planner_plugin/: CMakeLists.txt  package.xml  straight_line_plugin_info.xml
custom_nav2_planner_plugin/include/custom_nav2_planner_plugin/: straight_line_planner.hpp
custom_nav2_planner_plugin/src/: straight_line_planner.cpp
kalman_filters/: CMakeLists.txt
kalman_filters/config/: gps_wpf_demo.mvc
kalman_filters/launch/: basic_mobile_ekf.launch.py  mapviz.launch.py  outdoor_ekf.launch.py
kalman_filters/params/: ekf.yaml  outdoor_ekf.yaml
kalman_filters/src/: wheel_odometry.cpp
my_box_bot_gazebo/: CMakeLists.txt  package.xml
my_box_bot_gazebo/launch/: control_position_velocity_robot_description.launch.py  main.launch.xml  spawn_robot_description_ros2_final.launch.xml  start_world.launch.py  start_world_box_room.launch.py  start_world_race_track.launch.py
nav2_features/: CMakeLists.txt  package.xml
nav2_features/config/: gps_waypoints.yaml
nav2_features/scripts/: gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower.py
nav2_features/src/: go_to_pose.cpp  poses.txt
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: diff_drive_controller_config.yaml
robot_description/launch/: urdf_visualize_final.launch.py
robot_description/meshes/: base.dae  wheel.dae
robot_description/rviz/: default.rviz
robot_description/src/: fake_battery_status.cpp
robot_description/urdf/: camera.xacro  diffbot.ros2_control.xacro  gazebo_essentials.xacro  hokuyo.xacro  robot_base.xacro  robot_essentials.xacro
robot_foxglove/: CMakeLists.txt  package.xml
robot_foxglove/launch/: robot_foxglove.launch
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: main.launch.py  main_indoor.launch.py  main_outdoor.launch.py  spawn_robot_description2.launch.py  spawn_robot_description_outdoor.launch.py  start_world.launch.py  start_world_outdoor.launch.py
robot_gazebo/worlds/: sonoma_raceway.world
slam/: CMakeLists.txt  package.xml
slam/config/: abort_when_low_battery.xml  bt_navigator_abort_when_battery_low.yaml  filters.yaml  mapper_params.yaml  nav2_gps_no_map_params.yaml  nav2_params.yaml  nav2_params_keepout_map.yaml  planner_server.yaml  recovery.yaml
slam/config/custom_controller/: nav2_params_custom_controller.yaml
slam/config/custom_costmap/: nav2_param_custom_costmap.yaml  nav2_param_custom_moving_costmap.yaml
slam/config/custom_planner/: nav2_params_keepout_custom_planner.yaml
slam/launch/: navigation2_filtered.launch.py  navigation2_filtered_custom_controller.launch.py  navigation2_filtered_custom_costmap.launch.py  navigation2_filtered_custom_planner.launch.py  navigation2_filtered_low_battery.launch.py  navigation2_filtered_moving_custom_costmap.launch.py  navigation2_outdoor.launch.py  navigation_launch.py  online_async_launch.py
slam/maps/: my_map_keepout.pgm  my_map_keepout.yaml
src/Wall_Follower/action_service/launch/: action_client.launch.py
src/Wall_Follower/action_service/src/: action_client.cpp  action_server copy.cpp
src/Wall_Follower/custom_messages/: CMakeLists.txt  package.xml
src/Wall_Follower/topic_publisher_pkg/: package.xml
src/Wall_Follower/topic_publisher_pkg/launch/: main_v1.launch.py
src/Wall_Follower/topic_publisher_pkg/src/: move_robot_service_action_v1.cpp
src/Wall_Follower/wall_service_pkg/: CMakeLists.txt  package.xml
src/Wall_Follower/wall_service_pkg/launch/: main.launch.py
src/Wall_Follower/wall_service_pkg/src/: service_client.cpp
src/kalman_filters/: package.xml
src/kalman_filters/params/: ekf.yaml
src/kalman_filters/src/: kalman_filter_velocity.cpp  publish_odom_frame_filtered.cpp
src/my_box_bot_gazebo/: package.xml
src/my_box_bot_gazebo/launch/: main.launch.xml  spawn_robot_description2.launch.py  start_world_box_room.launch.py  start_world_race_track.launch.py
src/nav2_features/: CMakeLists.txt  package.xml  poses.txt
src/nav2_features/src/: go_through_poses.cpp  go_to_pose.cpp  poses.txt
src/robot_description/launch/: urdf_visualize_final.launch.py
src/robot_description/rviz/: default.rviz  urdf_geometry_vis.rviz  urdf_vis.rviz
src/robot_description/urdf/: camera.xacro  gazebo_essentials.xacro  robot_base.xacro
src/slam/config/: behavior.xml  bt_navigator.yaml  controller.yaml  filters.yaml  mapper_params.yaml  nav2_params.yaml
src/slam/launch/: navigation2_filtered.launch.py  navigation2_launch.py  navigation_launch.py
src/slam/maps/: my_map.pgm  my_map.yaml  my_map_keepout.yaml
yolo/yolobot_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
